--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,6 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        git checkout catchup
-        git merge master
+        git checkout -b catchup
+        git merge origin/master
+        git push --set-upstream origin catchup
