--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,14 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-     - uses: actions/checkout@v2
-     - with:
+      - uses: actions/checkout@v2
+        with:
          fetch-depth: 0
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        git checkout catchup
-        git merge master
-        git push 
+      - name: Run a multi-line script
+        run: |
+          git checkout catchup
+          git merge master
+          git push 
     # --set-upstream origin catchup
