--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
     # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          git pull
           git checkout catchup
           git merge master
           git push 
