--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 
 name: catch_up
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# some silly change
 on:
   push:
     branches: [ master ]
